# neutun

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml  fly.toml  musl_build.sh
.github/workflows/: check.yml  publish_crate.yml  release.yml
docs/superpowers/plans/: 2026-04-01-cli-redesign.md
docs/superpowers/specs/: 2026-04-01-cli-redesign-design.md
neutun/: Cargo.toml
neutun/src/: cli_ui.rs  config.rs  daemon.rs  interactive.rs  local.rs  main.rs  saved_config.rs  update.rs
neutun/src/introspect/: mod.rs
neutun/static/css/: styles.css
neutun/templates/: base.html
neutun_lib/: Cargo.toml
neutun_lib/src/: lib.rs
neutun_server/: Cargo.toml
neutun_server/src/: config.rs  connected_clients.rs  control_server.rs  main.rs  observability.rs  remote.rs
neutun_server/src/auth/: client_auth.rs  mod.rs  reconnect_token.rs  simple_auth.rs
neutun_server/src/network/: mod.rs  server.rs
