[package]
name = "neutun"
description = "expose your local web server to the internet with a public url"
version = "1.0.4"
authors = ["Neutun Developers"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Neuron-Mr-White/neudun"
readme = "../README.md"

[[bin]]
name = "neutun"
path = "src/main.rs"

[dependencies]
neutun_lib = { version = "1.0.4", path = "../neutun_lib" }
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"]}
tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots"]}
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
ring = "0.17"
lazy_static = "1.5.0"
pretty_env_logger = "0.5.0"
dirs = "6.0"
log = "0.4.29"
human-panic = "2.0"
structopt = "0.3.26"
colored = "3.1.1"
thiserror = "2.0"
indicatif = "0.18.4"
httparse = "1.10.1"
warp = { version = "0.4.2", features = ["server", "websocket"] }
bytes = "1.11"
askama = { version = "0.15", features = ["serde_json"] }
chrono = "0.4"
uuid = {version = "1.23", features = ["serde", "v4"] }
hyper = "1.8"
hyper-rustls = "0.27"
http-body = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
cli-table = "0.5"
semver = "1.0"
webpki-roots = "1.0"
