[package]
name = "neutun_server"
description = "expose your local web server to the internet with a public url"
version = "1.0.4"
authors = ["Neutun Developers"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Neuron-Mr-White/neudun"
readme = "../README.md"

[[bin]]
name = "neutun_server"
path = "src/main.rs"

[dependencies]
neutun_lib = { path = "../neutun_lib" }
warp = { version = "0.4", features = ["server", "websocket"] }
tokio = { version = "1.50", features = ["full"] }
base64 = "0.22"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.5.0"
httparse = "1.10.1"
url = "2.5.8"
thiserror = "2.0"
uuid = {version = "1.23", features = ["serde", "v4"] }
sha2 = "0.11"
dashmap = "6.1"
reqwest = { version = "0.13", features = ["json"] }
trust-dns-resolver = "0.23"
hmac-sha256 = "1.1"
hex = "0.4"
rand = "0.10"
async-trait = "0.1.89"
openssl = { version = "0.10", features = ["vendored"] }

tracing = "0.1.44"
tracing-subscriber = "0.3.23"
